// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox snapshot Checkbox: 0 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</label>
`;

exports[`checkbox snapshot Checkbox: 1 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</label>
`;

exports[`checkbox snapshot Checkbox: 2 1`] = `
<div
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</div>
`;

exports[`checkbox snapshot Checkbox: 3 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</label>
`;

exports[`checkbox snapshot Checkbox: 4 1`] = `
<label
  className="checkbox"
>
  <input
    checked={true}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</label>
`;

exports[`checkbox snapshot Checkbox: 5 1`] = `
<label
  className="checkbox"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={null}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</label>
`;

exports[`checkbox snapshot Checkbox: 6 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    checked={false}
    className="checkbox_input"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="checkbox_span"
  />
</label>
`;
